--- a/Skyve/App/Skyve.exe.Config
+++ b/Skyve/App/Skyve.exe.Config
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration><appSettings>
-                   <add key="GamePath" value="" />
-                   <add key="AppDataPath" value="" />
-                   <add key="SteamPath" value="" />
-                   <add key="Platform" />
-               </appSettings><startup>
+  <add key="GamePath" value="D:\Games\CitiesSkylines" />
+  <add key="AppDataPath" value="C:\Users\phoenix\AppData\Local\Colossal Order\Cities_Skylines" />
+  <add key="SteamPath" />
+  <add key="Platform" />
+</appSettings><startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup></configuration>
